# sfc

./: .clang-format  .gitignore  .gitlab-ci.yml  .gitmodules  .travis.yml  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  claude.md  cns.natvis  config.h  cpp.hint  makefile  nms.compiler.vcxproj  nms.cuda.compiler.vcxproj  nms.inl  nms.natvis  nms.props  nms.sln  nms.test.vcxproj  nms.vcxproj  nms.vcxproj.filters  rc.sln  rc.vcxproj  rc.vcxproj.filters  readme.md  sfc.natvis  ustd.h  ustd.ixx  ustd.natvis  ustd.sln  ustd.vcxproj  ustd.vcxproj.filters  xmake.lua
src/: CMakeLists.txt  rc.inl  rc.natvis
src/rc/: alloc.h  collections.h  core.h  cuda.h  env.cc  env.h  ffi.h  fs.h  gpu.h  io.h  log.h  math.h  os.cc  os.h  serial.h  sync.h  sys.h  term.h  test.h  thread.cc  thread.h  time.cc  time.h
src/rc/alloc/: boxed.h  mod.cc  mod.h  string.h  vec.h
src/rc/collections/: binary_heap.h  btree.h  hash_map.h  hash_table.h  linked_list.h  vec_deque.h
src/rc/core/: atomic.h  cmp.h  fmt.h  intrin.h  iter.h  macros.h  mem.h  mod.h  num.h  ops.h  option.h  panicking.cc  panicking.h  ptr.h  slice.h  str.h
src/rc/cuda/: imp.cc  imp.h  mod.cc  mod.h  ndarray.h  texture.h
src/rc/ffi/: cstring.cc  cstring.h
src/rc/fs/: file.cc  file.h  mod.h  path.cc  path.h
src/rc/gpu/: imp.h  mod.h
src/rc/io/: mod.cc  mod.h  read.h  stdio.h  write.h
src/rc/log/: backends.cc  backends.h  logger.cc  logger.h  mod.h
src/rc/math/: mod.h  ndarray.h  ndslice.h  tensor.h
src/rc/serial/: decoder.h  encoder.h  json.cc  mod.cc  mod.h
src/rc/sync/: arc.h  condvar.cc  condvar.h  mutex.cc  mutex.h
src/rc/sys/: unix.h  unix.inl  windows.h  windows.inl
src/rc/term/: color.h  mod.cc  mod.h
src/rc/test/: benchmark.h  test.cc  test.h
src/rc/thread/: mod.h
src/sfc/: CMakeLists.txt  alloc.h  app.h  chrono.h  collections.h  core.h  cyber.h  env.h  ffi.h  fs.h  geo.h  io.h  log.h  math.h  msg.h  serde.h  sync.h  sys.h  task.h  test.h  thread.h  time.h
src/sfc/alloc/: alloc.cc  alloc.cxx  alloc.h  box.cxx  boxed.cxx  boxed.h  list.cxx  list.h  rawbuf.h  rc.cxx  rc.h  string.cc  string.cxx  string.h  vec.cxx  vec.h
src/sfc/app/: clap.cc  clap.cxx  clap.h  cmd.cc  cmd.cxx  cmd.h  opts.cc  opts.cxx  opts.h
src/sfc/backtrace/: backtrace.cc  backtrace.h  capture.cc  capture.h  frame.cc  frame.h
src/sfc/chrono/: chrono.cc  chrono.cxx
src/sfc/collections/: btree.cxx  btree.h  circbuf.h  hash.cxx  hash.h  hash_map.cxx  hash_map.h  hash_set.cxx  hash_set.h  hash_tbl.h  queue.cxx  queue.h  vec_deque.cxx  vec_deque.h  vec_map.h  vecmap.cxx  vecmap.h  vecset.h
src/sfc/core/: chr.cc  chr.cxx  chr.h  cmp.h  convert.h  dyn.h  expect.h  fmt.cc  fmt.cxx  fmt.h  fmts.h  future.h  hash.cc  hash.h  io.cc  io.h  iter.h  mem.cxx  mem.h  mod.h  num.cxx  num.h  ops.cxx  ops.h  option.cxx  option.h  panic.cc  panic.h  panicking.cc  panicking.h  ptr.cxx  ptr.h  reflect.cxx  reflect.h  result.cxx  result.h  slice.cc  slice.cxx  slice.h  str.cc  (+13 more)
src/sfc/cyber/: chan.h  cmpt.h  msgq.h  recv.h  sched.cc  sched.h  send.h  task.cc  task.h
src/sfc/env/: env.cc  env.cxx  env.h  mod.cc  mod.cxx  mod.h
src/sfc/ffi/: c_str.cc  c_str.h  cstr.cc  cstr.h  cstring.h  library.cc  library.h  os_str.cc  os_str.h  w_str.cc  w_str.h  wstr.cc  wstr.h
src/sfc/fs/: file.cc  file.cxx  file.h  funcs.cc  funcs.h  meta.cc  meta.h  path.cc  path.cxx  path.h  path_buf.cc  path_buf.h
src/sfc/geo/: aabox.cc  aabox.h  angle.h  line.cc  line.h  matrix.h  point.h  point_cloud.h  polygon.cc  polygon.h  pose.h  projection.h  ray.h  size.h  trans.h  vector.h
src/sfc/io/: buf.cc  buf.cxx  buf.h  error.cc  error.h  file.cc  file.h  mod.cc  mod.cxx  mod.h  read.cxx  read.h  stdio.cc  stdio.cxx  stdio.h  write.h
src/sfc/log/: backend.cc  backend.h  console_backend.cc  console_backend.h  file_backend.cc  file_backend.h  global.cc  global.h  log.cc  log.cxx  logger.cc  logger.cxx  logger.h  mod.h  record.h
src/sfc/math/: funcs.h  mod.h  ndarray.cxx  ndarray.h  ndview.cxx  ndview.h  sintbl.h
src/sfc/msg/: chan.h  msgq.h  recv.h  send.h
src/sfc/serde/: base64.cc  base64.cxx  base64.h  des.h  json.cc  json.cxx  json.h  mod.cc  mod.h  node.cc  node.h  ser.cxx  ser.h  xml.cc  xml.h
src/sfc/sync/: arc.cxx  arc.h  atomic.cc  atomic.h  channel.h  condvar.cc  condvar.cxx  condvar.h  mpmc.cxx  mpmc.h  mpsc.h  mutex.cc  mutex.cxx  mutex.h  queue.cxx  queue.h  reentrant_lock.cc  reentrant_lock.h  ringbuf.cxx  ringbuf.h
src/sfc/sys/: alloc.h  alloc.inl  backtrace.h  backtrace.inl  env.h  env.inl  fs.h  fs.inl  io.h  io.inl  os.h  posix.h  raw.h  sync.h  sync.inl  thread.h  thread.inl  time.h  time.inl  windows.h
src/sfc/task/: sched.cc  sched.h  task.cc  task.cxx  task.h  worker.cc  worker.cxx  worker.h
src/sfc/test/: app.cc  app.cxx  (+13 more)
(+523 files in other folders)
